--- a/TraficLights/TraficLights/MainPage.xaml
+++ b/TraficLights/TraficLights/MainPage.xaml
@@ -6,9 +6,19 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="CornflowerBlue">
 
-    <Grid>
+    <Grid
+        Background="Coral"
+        Margin="200" 
+        BorderBrush="White"
+        BorderThickness="7">
+        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
 
+        </Grid.ColumnDefinitions>
     </Grid>
 </Page>
