--- a/TraficLights/TraficLights/MainPage.xaml
+++ b/TraficLights/TraficLights/MainPage.xaml
@@ -45,12 +45,13 @@
         <Button x:Name="btnAuto" Grid.Column="0" Background="White" Height ="200"  Foreground="Black"
                 FontSize="60" Content="auto"  FontStyle="Italic" FontWeight="Bold"
                 HorizontalAlignment="Stretch" VerticalAlignment="Top" BorderThickness="7"
-                BorderBrush="RoyalBlue" CornerRadius="50" Grid.ColumnSpan="2" Margin="7,7,455,0">
+                BorderBrush="RoyalBlue" CornerRadius="50" Click="btnAuto_Click">
         </Button>
         <Button x:Name="btnManual" Grid.Column="2" Background="White" Height ="200"  Foreground="Black"
                 FontSize="30" Content="Manual"  FontStyle="Italic" FontWeight="Bold"
                 HorizontalAlignment="Stretch" VerticalAlignment="Top" BorderThickness="7"
-                BorderBrush="RoyalBlue" CornerRadius="50" Margin="7,7,-7,0">
+                BorderBrush="RoyalBlue" Click="btnManual_Click"
+                >
         </Button>
         <Image x:Name="imgSanta" Width="500" Height="500" Grid.Column="0"
            Source="Assets\Character\Santa\santa_idle.gif" Grid.ColumnSpan="2" Margin="7,200,417,200" Grid.RowSpan="2">
