--- a/TraficLights/TraficLights/MainPage.xaml
+++ b/TraficLights/TraficLights/MainPage.xaml
@@ -43,15 +43,15 @@
             </Ellipse>
 
         </Grid>
-        <Button x:Name="btnAuto" Grid.Column="0" Background="AntiqueWhite" Height ="200"  Foreground="Black"
+        <Button x:Name="btnAuto" Grid.Column="0" Background="Coral" Height ="200"  Foreground="Black"
                 FontSize="40" Content="auto"  FontStyle="Italic" FontWeight="Bold"
                 HorizontalAlignment="Stretch" VerticalAlignment="Top" BorderThickness="7"
-                BorderBrush="RoyalBlue" CornerRadius="50" Click="btnAuto_Click">
+                BorderBrush="RoyalBlue" CornerRadius="50" Click="btnAuto_Click" Margin="0,0,0,0">
         </Button>
-        <Button x:Name="btnManual" Grid.Column="2" Background="AntiqueWhite" Height ="200"  Foreground="Black"
+        <Button x:Name="btnManual" Grid.Column="2" Background="Coral" Height ="200"  Foreground="Black"
                 FontSize="40" Content="Manual"  FontStyle="Italic" FontWeight="Bold"
                 HorizontalAlignment="Stretch" VerticalAlignment="Top" BorderThickness="7"
-                BorderBrush="RoyalBlue" CornerRadius="50" Click="btnManual_Click">
+                BorderBrush="RoyalBlue" CornerRadius="50" Click="btnManual_Click" Margin="31,0,-4,0">
         </Button>
         <Image x:Name="imgSanta" Width="300" Height="300" Grid.Column="0" Grid.RowSpan="2"
                HorizontalAlignment="Stretch" Margin="0,214,0,172"
